--- a/mithas-mahal/src/index.css
+++ b/mithas-mahal/src/index.css
@@ -7,7 +7,11 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-image: url('./assets/bg.jpeg');
+  background-repeat: repeat;
+  background-position: center;
+  background-attachment: scroll;
+  background-size: 400px 400px;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
