--- a/mithas-mahal/src/index.css
+++ b/mithas-mahal/src/index.css
@@ -28,12 +28,13 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  @apply overflow-x-hidden text-gray-900;
+  background: none;
 }
 
 h1 {
@@ -72,8 +73,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-/*
-@tailwind base;
-@tailwind components;
-@tailwind utilities;*/
 
