--- a/mithas-mahal/src/App.css
+++ b/mithas-mahal/src/App.css
@@ -40,3 +40,15 @@
 .read-the-docs {
   color: #888;
 }
+.product-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 250px; 
+  border-radius: 12px; 
+  transition: transform 0.3s ease-in-out;
+}
+
+.product-image:hover {
+  transform: scale(1.05); 
+}
