--- a/mithas-mahal/src/App.css
+++ b/mithas-mahal/src/App.css
@@ -44,13 +44,15 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 250px; 
-  border-radius: 12px; 
+  max-width: 250px;
+  border-radius: 12px;
   transition: transform 0.3s ease-in-out;
 }
 
-.product-image:hover {
-  transform: scale(1.1); 
+.product-image:hover,
+.product-image:active {
+  transform: scale(1.1);
   cursor: pointer;
 }
+
 
