updated hompage static products to horizontal scrollable, enhance the ui, added more products

--- a/mithas-mahal/src/index.css
+++ b/mithas-mahal/src/index.css
@@ -31,3 +31,11 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display', serif;
 }
+
+.scrollbar-hide {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
